--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
+h1 {
+  @apply font-anton text-h1;
+}
+
+p {
+  @apply font-work-sans text-p;
+}
+
+nav {
+  @apply font-roboto text-nav;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
