--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,6 @@
 
   h1 {
     font-size: 3.125rem;
-    color: var(--gray-900);
     font-weight: 500;
     line-height: 100%;
     letter-spacing: -0.125rem;
@@ -225,7 +224,7 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title }}</h1>
+      <h1>Hello, <span class="text-blue-500">{{ title }}</span></h1>
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
