--- a/src/page/public/layout-public/layout-public.component.html
+++ b/src/page/public/layout-public/layout-public.component.html
@@ -1,5 +1,7 @@
 <header>Header public</header>
+<app-services></app-services>
 <main>
   <router-outlet></router-outlet>
 </main>
+
 <app-footer></app-footer>
