--- a/src/component/services/services.component.html
+++ b/src/component/services/services.component.html
@@ -1,6 +1,8 @@
-<div class="services-container">
-  <div>
-    <app-service-card1></app-service-card1>
-    <app-service-card2></app-service-card2>
-  </div>
-</div>
+<app-service-card1
+  [titre]="'Service 1'"
+  [text]="'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'"
+  [image]="
+    'https://images.unsplash.com/photo-1605152276897-4f618f831968?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cHJlc3RhdGlvbiUyMGluZm9ybWF0aXF1ZXxlbnwwfHwwfHx8MA%3D%3D'
+  "
+  [textPosition]="'left'"
+></app-service-card1>
